# CanSat

./: .gitignore  CMakeLists.txt  platformio.ini  run.sh
cameraOS/: cameraOS.cpp  cameraOS.h  record.py  start.py
cameraOS/lib/: burnDetection.py  compression.py
src/: main.cpp
src/loraPackets/: lora.cpp  lora.h  packet.cpp  packet.h  packets.cpp  packets.h  sendPayload.cpp  sendPayload.h  testeLora.cpp
